User doc added
